# pinsdb

./: .gitignore  .pre-commit-config.yaml  README.md  data-viz.py  elf.py  homepage.py  pyproject.toml  results.html  results.md  results.py  statistic.py  test.ipynb  test.py  zensical.toml
.data/20240723/: G1.txt  G3.txt
.data/20240730/: G1.txt  G2.txt  G3.txt  G4.txt
.data/20240806/: G1.txt  G2.txt  G3.txt  G4.txt
.data/20240808/: G1.txt  G2.txt
.data/20240810/: G3.txt
.data/20240813/: G1.txt  G2.txt
.data/20240814/: G4.txt
.data/20240815/: G1.txt  G2.txt
.data/20240821/: G2.txt  G3.txt  G4.txt
.data/20240822/: G1.txt  G2.txt
.data/20240827/: G1.txt  G2.txt  G3.txt
.data/20240829/: G1.txt  G2.txt
.data/20240903/: G1.txt  G2.txt  G3.txt  G4.txt
.data/20240906/: G1.txt  G2.txt
.data/20240910/: G1.txt  G2.txt  G3.txt  G4.txt
.data/20240926/: G1.txt  G2.txt
.data/20241008/: G1.txt  G2.txt  G3.txt  G4.txt
.data/20241015/: G1.txt  G2.txt  G3.txt
.data/20241022/: G1.txt  G3.txt
.data/20241029/: G1.txt  G2.txt  G3.txt
.data/20241105/: G1.txt  G2.txt
.data/20241112/: G1.txt  G2.txt
.data/20241119/: G1.txt  G2.txt  G3.txt
.data/20241126/: G1.txt  G2.txt  G3.txt
.data/20241203/: G1.txt  G2.txt  G3.txt
.data/20241210/: G1.txt  G2.txt  G3.txt
.data/20241218/: G1.txt  G2.txt  G3.txt
.data/20241223/: G1.txt  G2.txt
.data/20241226/: G1.txt  G2.txt
.data/20241228/: G3.txt
docs/: index.md  results.html  statistic.html  statistics.html
site/: 404.html  index.html  results.html  search.json  statistic.html
src/pinsdb/: app.py  (+6 more)
(+178 files in other folders)
