[project]
name = "pinsdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "attrs>=24.3.0",
    "click>=8.2.1",
    "great-tables>=0.16.1",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "marimo>=0.18.4",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "polars>=1.19.0",
    "seaborn>=0.13.2",
    "zensical>=0.0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build]
packages = ["src/pinsdb"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
